@@ -1,3 +1,4 @@
+* FEA#8271 Add support of expand attribute on group tag
 * FEA#8785 Change title to Coog in the Sao browser
 * FEA#7941 Add keyword attribute to button tag
 * OTH#0000 Correct grunt installation steps in README
